# notificacao_hospitalar

./: mkdocs.yml  pyproject.toml
core/: settings.py
core/templates/: base.html  home.html
events/templates/: _events_end_message.html
events/templates/partial/: _events_form_ocurrence_1.html  _events_form_patient.html
